[DRAFT - RFC] Diff all in one/same page
Diff all in patches in one page. This was a highly requested
feature, and really useful when there are many small files.
It also gives you a complete overview.

Bug: Issue 938
Change-Id: I984043bba3d08ec2ce3a16d98185291b666fe7f4

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -140,3 +140,4 @@ buttonClose = Close
 
 buttonDiffAllSideBySide = Diff All Side-by-Side
 buttonDiffAllUnified = Diff All Unified
+buttonDiffAllInOne = Diff All In One
