--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -9,8 +9,12 @@ watchedHeading = Open Changes of Watched Projects
 draftsHeading = Changes with unpublished drafts
 myDashboardTitle = My Reviews
 unknownDashboardTitle = Code Review Dashboard
-incomingReviews = Incoming reviews
-outgoingReviews = Outgoing reviews
+incomingReviews = Review requests for {0}
+outgoingReviews = Started by {0}
+myIncomingReviews = Review requests for me
+myOutgoingReviews = Started by me
+unknownIncomingReviews = Review requests
+unknownOutgoingReviews = Started
 recentlyClosed = Recently closed
 allOpenChanges = All open changes
 allAbandonedChanges = All abandoned changes
