--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritMessages.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritMessages.properties
@@ -3,5 +3,5 @@ windowTitle2 = {0} | {1} Code Review
 poweredBy = Powered by <a href="http://code.google.com/p/gerrit/" target="_blank">Gerrit Code Review</a> ({0})
 
 noSuchAccountMessage = {0} is not a registered user.
-
 noSuchGroupMessage = Group {0} does not exist or is not visible to you.
+pluginFailed = Plugin JavaScript {0} failed to load
