--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,8 @@ limitations under the License.
       <modules>
         <module>gerrit-plugin-api</module>
         <module>gerrit-plugin-archetype</module>
-        <module>gerrit-gwtui-plugin</module>
+	<module>gerrit-gwtui-plugin</module>
+	<module>gerrit-plugin-js-archetype</module>
      </modules>
     </profile>
     <profile>
