--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@ limitations under the License.
         <module>gerrit-plugin-archetype</module>
         <module>gerrit-gwtui-plugin</module>
         <module>gerrit-plugin-js-archetype</module>
+      	<module>gerrit-plugin-gwt-archetype</module>
      </modules>
     </profile>
     <profile>
