RFC: Add GWT plugin archetype
Adds example GWT based Web UI plugin archetype.

Change-Id: Ib11c1571522ced54c6bf74cd1a0aff71da406c3b
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@ limitations under the License.
         <module>gerrit-plugin-api</module>
         <module>gerrit-plugin-archetype</module>
 	<module>gerrit-gwtui-plugin</module>
+	<module>gerrit-plugin-gwt-archetype</module>
 	<module>gerrit-plugin-js-archetype</module>
      </modules>
     </profile>
