--- a/gerrit-server/pom.xml
+++ b/gerrit-server/pom.xml
@@ -180,6 +180,11 @@ limitations under the License.
       <groupId>org.pegdown</groupId>
       <artifactId>pegdown</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
