--- a/pom.xml
+++ b/pom.xml
@@ -843,6 +843,12 @@ limitations under the License.
         <artifactId>pegdown</artifactId>
         <version>1.1.0</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.9.8</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
