--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@ limitations under the License.
     <gwtVersion>2.4.0</gwtVersion>
     <slf4jVersion>1.6.1</slf4jVersion>
     <guiceVersion>3.0</guiceVersion>
-    <jettyVersion>7.2.1.v20101111</jettyVersion>
+    <jettyVersion>8.1.7.v20120910</jettyVersion>
 
     <gwt.compileReport>false</gwt.compileReport>
 
@@ -779,8 +779,8 @@ limitations under the License.
         <exclusions>
           <exclusion>
             <!-- use Apache javax.servlet not CDDL -->
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
+            <groupId>org.eclipse.jetty.orbit</groupId>
+            <artifactId>javax.servlet</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -795,6 +795,12 @@ limitations under the License.
         <groupId>org.apache.tomcat</groupId>
         <artifactId>servlet-api</artifactId>
         <version>6.0.29</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.tomcat</groupId>
+        <artifactId>tomcat-servlet-api</artifactId>
+        <version>7.0.32</version>
       </dependency>
 
       <dependency>
