--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -38,7 +38,7 @@ limitations under the License.
       <groupId>org.apache.tomcat</groupId>
       <artifactId>servlet-api</artifactId>
       <!-- compile, not provided. our embedded Jetty needs this -->
-      <scope>compile</scope>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
