Add gerrit-realm-openid module
Refactor gerrit-openid to gerrit-realm-openid

Change-Id: I71cd6d20e595105d6e74d46f5d2b38f73132d69e
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -85,12 +85,6 @@ limitations under the License.
 
     <dependency>
       <groupId>com.google.gerrit</groupId>
-      <artifactId>gerrit-openid</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.gerrit</groupId>
       <artifactId>gerrit-sshd</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -104,6 +98,24 @@ limitations under the License.
     <dependency>
       <groupId>com.google.gerrit</groupId>
       <artifactId>gerrit-pgm</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-development</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-openid</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-http</artifactId>
       <version>${project.version}</version>
       <exclusions>
         <exclusion>
