Add gerrit-realm-http module
Initial add of gerrit-realm-http module

Change-Id: I07a4a456c6dbe9d5486b4e03f04c265439137281
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@ limitations under the License.
     <module>gerrit-plugin-realm</module>
     <module>gerrit-realm-development</module>
     <module>gerrit-realm-openid</module>
+    <module>gerrit-realm-http</module>
   </modules>
 
   <profiles>
