Add gerrit-realm-ldap module
Initial add of gerrit-realm-ldap module. All LDAP-realm specific classes
were moved to this new module.

gerrit-realm-ldap provides four kind of realms:
 * LDAP
 * LDAP_BIND
 * HTTP_LDAP
 * CLIENT_SSL_CERT_LDAP

Change-Id: Ie6022ecaa0f386b38bf6d82305acbecbb9aff41b
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -130,6 +130,12 @@ limitations under the License.
       <artifactId>jetty-servlet</artifactId>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-ldap</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
