Add a new projects menu that displays the recently accessed projects
On servers with many projects finding a certain project in the project
list takes a moment (either to spot it manually or to use the search in
the browser to find it). Often a user is only interested in a few
projects and these projects are accessed again and again. Finding these
projects again and again in the project list is a bit annoying. Gerrit
now remembers for each user which projects the user has recently
accessed and shows these projects under a new 'Projects > Recent' menu.
The cache that stores the recently accessed projects is persistent.

Change-Id: I9cdf05af1dfcc4445328d1984c5bce23cd11699b
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritConstants.properties
@@ -54,6 +54,7 @@ menuDiffFiles = Files
 
 menuProjects = Projects
 menuProjectsList = List
+menuProjectsRecent = Recent
 menuProjectsCreate = Create New Project
 
 menuPeople = People
