Allow filtering of projects on the AllProjectsScreen
Add a filter text box to the AllProjectsScreen that allows users to
filter the displayed projects. If a filter string is provided only
projects that contain this string in their name are shown. The project
list is automatically updated while the filter string is typed.

Being able to filter the project list makes it easier for user to
search and find a certain project.

Change-Id: Iae5416b137cc6551c980691434f6d89263f3ddd8
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/admin/AdminConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/admin/AdminConstants.properties
@@ -83,6 +83,7 @@ createGroupTitle = Create Group
 groupTabGeneral = General
 groupTabMembers = Members
 projectListTitle = Projects
+filter = Filter:
 createProjectTitle = Create Project
 projectAdminTabGeneral = General
 projectAdminTabBranches = Branches
