Adds gerrit-realm-development module
Initial commit of gerrit-realm-development maven module, this module
will add DEVELOPMENT_BECOME_ANY_ACCOUNT realm implementation.

Change-Id: Ia53ebe34d3b9e19e15e33a5769501e8bac0a49e3
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@ limitations under the License.
     <module>gerrit-extension-api</module>
 
     <module>gerrit-gwtui</module>
+    <module>gerrit-realm-development</module>
   </modules>
 
   <profiles>
