--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -103,6 +103,12 @@ limitations under the License.
 
     <dependency>
       <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-development</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
       <artifactId>gerrit-pgm</artifactId>
       <version>${project.version}</version>
       <exclusions>
