Add gerrit-realm-openid module
Move all classes connected with OpenId realm to gerrit-realm-openid
module.

Change-Id: If0a700fc5d72410d9de1489e61c41d5bd1c39733
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -109,6 +109,12 @@ limitations under the License.
 
     <dependency>
       <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-openid</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
       <artifactId>gerrit-pgm</artifactId>
       <version>${project.version}</version>
       <exclusions>
@@ -177,7 +183,7 @@ limitations under the License.
             <configuration>
               <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/plugins</outputDirectory>
               <includeGroupIds>com.google.gerrit</includeGroupIds>
-              <includeArtifactIds>gerrit-realm-development</includeArtifactIds>
+              <includeArtifactIds>gerrit-realm-development,gerrit-realm-openid</includeArtifactIds>
             </configuration>
             <goals>
               <goal>copy-dependencies</goal>
