Add gerrit-realm-openid-sso module
Adds openid sso realm plugin equivalent to AuthType.OPENID_SSO

Change-Id: I154006fa042fbe93720500eae7ecb429dad83ea5
Signed-off-by: Dariusz Luksza <dariusz@luksza.org>

--- a/gerrit-war/pom.xml
+++ b/gerrit-war/pom.xml
@@ -115,6 +115,12 @@ limitations under the License.
 
     <dependency>
       <groupId>com.google.gerrit</groupId>
+      <artifactId>gerrit-realm-openid-sso</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.gerrit</groupId>
       <artifactId>gerrit-pgm</artifactId>
       <version>${project.version}</version>
       <exclusions>
@@ -183,7 +189,11 @@ limitations under the License.
             <configuration>
               <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/plugins</outputDirectory>
               <includeGroupIds>com.google.gerrit</includeGroupIds>
-              <includeArtifactIds>gerrit-realm-development,gerrit-realm-openid</includeArtifactIds>
+              <includeArtifactIds>
+                gerrit-realm-development,
+                gerrit-realm-openid,
+                gerrit-realm-openid-sso
+              </includeArtifactIds>
             </configuration>
             <goals>
               <goal>copy-dependencies</goal>
