--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/admin/AdminConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/admin/AdminConstants.properties
@@ -87,6 +87,7 @@ createProjectTitle = Create Project
 projectAdminTabGeneral = General
 projectAdminTabBranches = Branches
 projectAdminTabAccess = Access
+projectAdminTabDashes = Dashboards
 
 plugins = Plugins
 pluginEnabled = Enabled
