Show file comment and inline comment separately.
Display file comment and inline comment separately
in PatchTable and patchset HistoryTable.

Change-Id: I07d693152b98048a03dcb7f5ab270bbde48e83a0

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -38,7 +38,8 @@ nextPatchSet = Next patch set
 keyPublishComments = Review and publish comments
 
 patchTableColumnName = File Path
-patchTableColumnComments = Comments
+patchTableColumnFileComments = File Comments
+patchTableColumnLineComments = Line Comments
 patchTableColumnSize = Size
 patchTableColumnDiff = Diff
 patchTableDiffSideBySide = Side-by-Side
