--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -98,6 +98,7 @@ buttonAbandonChangeSend = Abandon Change
 headingAbandonMessage = Abandon Message:
 abandonChangeTitle = Code Review - Abandon Change
 oldVersionHistory = Old Version History:
+diffTypeList = Diff Type:
 baseDiffItem = Base
 autoMerge = Auto Merge
 
