Button to allow Cherry Picking of a change to another branch.
Implemented using the new REST Api.

Branch auto-completion and email-templates follow in
separate changes.

Change-Id: If3a78d17e4be6d3bb06eef70d3b0e67867883d45

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -117,6 +117,12 @@ revertChangeTitle = Code Review - Revert Merged Change
 headingEditCommitMessage = Commit Message
 titleEditCommitMessage = Create New Patch Set
 
+buttonCherryPickChangeBegin = Cherry Pick To
+buttonCherryPickChangeSend = Cherry Pick Change
+headingCherryPickBranch = Cherry Pick to Branch:
+cherryPickCommitMessage = Cherry Pick Commit Message:
+cherryPickTitle = Code Review - Cherry Pick Change to Another Branch
+
 buttonRestoreChangeBegin = Restore Change
 restoreChangeTitle = Code Review - Restore Change
 headingRestoreMessage = Restore Message:
