Provide 3 options to help diff rebased patchsets.
Comparing rebased patchsets will produce forest files.
This feature help make it easy to pick out patches
related to these 2 patchset only.

A listbox in change UI provides 3 options:
-Filter out those irrelevant files from diff result.
-Rebase old patchset against the new patchset's parent before diff.
-Rebase new patchset against the old patchset's parent before diff.

Change-Id: I63d3a21ad4f1ff5dc59bd439466fe0846dab8ce8

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -31,6 +31,7 @@ changeTableOpen = Open change
 changeTableStar = Star (or unstar) change
 changeTablePagePrev = Previous page of changes
 changeTablePageNext = Next page of changes
+diffByList = Diff By:
 upToChangeList = Up to change list
 expandCollapseDependencies = Expands / Collapses dependencies section
 previousPatchSet = Previous patch set
