Allow editing of commit message from UI.
This change adds a small edit-icon on the top right
corner of the commit message box on the change screen.

Clicking it lets the user edit the commit message and a
new patch set will be created.

Change-Id: I2c4d4a3ba520d4c12ade4bb3b47a55ce7f1b19df

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/changes/ChangeConstants.properties
@@ -114,6 +114,10 @@ buttonRevertChangeSend = Revert Change
 headingRevertMessage = Revert Commit Message:
 revertChangeTitle = Code Review - Revert Merged Change
 
+headingEditCommitMessage = Commit Message
+titleEditCommitMessage = Edit Commit Message
+labelWarningEditCommitMessage = Warning: If you edit the commit message a new PatchSet will be created
+
 buttonRestoreChangeBegin = Restore Change
 restoreChangeTitle = Code Review - Restore Change
 headingRestoreMessage = Restore Message:
