Change Verified from MaxWithBlock to MaxNoBlock
Diffy sets Verified -1 on any change that requires downloading new
artifacts. With MaxWithBlock, that means that even if it is possible
to build, and someone else does so and sets Verified +1, the change is
still not submittable. To submit, someone needs to push a new patch
set or remove Diffy from the review.

Change to MaxNoBlock, where -1 no longer blocks. Maintainers may still
block submit with Code-Review -2.

Since this label was previously inherited, copy all values from
All-Projects.

Change-Id: Ia9b395b1154e04918399471dc7b00eb84086f48b

--- a/project.config
+++ b/project.config
@@ -17,6 +17,13 @@
 	create = group google/gerritcodereview-maintainers@googlegroups.com
 [access]
 	inheritFrom = Public-Projects
+[label "Verified"]
+	function = MaxNoBlock
+	copyAllScoresIfNoCodeChange = true
+	value = -1 Fails
+	value =  0 No score
+	value = +1 Verified
+	defaultValue = 0
 [label "Library-Compliance"]
 	function = MaxWithBlock
 	copyAllScoresIfNoCodeChange = true
