Revert "Set Verified function in rules.pl"
Somehow made everything submittable with no labels.

This reverts commit d5a114b1b75a2551d395e5eb92ef3b5955105571.

--- a/project.config
+++ b/project.config
@@ -17,8 +17,15 @@
 	create = group google/gerritcodereview-maintainers@googlegroups.com
 [access]
 	inheritFrom = Public-Projects
+[label "Verified"]
+	function = MaxNoBlock
+	copyAllScoresIfNoCodeChange = true
+	value = -1 Fails
+	value =  0 No score
+	value = +1 Verified
+	defaultValue = 0
 [label "Library-Compliance"]
-	# function set in rules.pl.
+	function = MaxWithBlock
 	copyAllScoresIfNoCodeChange = true
 	copyAllScoresOnTrivialRebase = true
 	value = -1 Do not submit
