Related Changes: Decorate merged and abandoned changes
Merged changes are decorated with a black dot; abandoned changes are
decorated with a dark red dot.

Change-Id: I1a5d044d432952f864df1fe3ec8ad9a514587fe4
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/ChangeConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/change/ChangeConstants.properties
@@ -28,3 +28,5 @@ sameTopic = Same Topic
 sameTopicTooltip = Changes with the same topic
 noChanges = No Changes
 indirectAncestor = Indirect ancestor
+merged = Merged
+abandoned = Abandoned
