Improve Java 1.8 support
Change-Id: I1bd5f39c617f246ad542b2735aee92f7065f9fe1

--- a/gerrit-plugin-api/pom.xml
+++ b/gerrit-plugin-api/pom.xml
@@ -56,4 +56,19 @@
     <url>http://code.google.com/p/gerrit/issues/list</url>
     <system>Google Code Issue Tracker</system>
   </issueManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
