Add icons to switch between side-by-side and unified diff view
For change edits the icon is not displayed, because the unified diff
view is not able to handle change edits yet.

Change-Id: I02b9800d40a510b9f90d6890e619aec89c8933d5
Signed-off-by: Edwin Kempin <edwin.kempin@sap.com>

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/patches/PatchConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/patches/PatchConstants.properties
@@ -68,3 +68,6 @@ fileTypeGitlink = Type: Git Commit in Subproject
 
 patchSkipRegionStart = ... skipped
 patchSkipRegionEnd = common lines ...
+
+sideBySideDiff = side-by-side diff
+unifiedDiff = unified diff
