Syntax highlighting: reStructuredText (rst)
rst mode depends on stex mode and makes use of overlay.

[1] works nicely on CM3 4.9 version [2], so [3] is fixed now.

Bug: issue 2779
[1] https://ceres-solver-review.googlesource.com/#/c/5683/18/docs/source/faqs.rst
[2] http://imgur.com/y8QEylt
[3] https://github.com/codemirror/CodeMirror/issues/2850
Change-Id: I03f134aadbb8c2c3c2a8d3dc027d2b7f234cd176

--- a/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
+++ b/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
@@ -34,8 +34,10 @@ properties = text/x-ini
 py = text/x-python
 r = text/r-src
 rb = text/x-ruby
+rst = text/x-rst
 scala = text/x-scala
 st = text/x-stsrc
+stex = text/x-stex
 v = text/x-verilog
 vert = x-shader/x-vertex
 vh = text/x-verilog
