Syntax highlighting: Objective-C and GLSL shader
CM 4.9 supports these through the clike mode.
Alias the file extensions and MIME types to clike.

Change-Id: Ic0268e84b9262e3d99fe81c6592dda4da5915a25

--- a/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
+++ b/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
@@ -12,7 +12,9 @@ diff = text/x-diff
 dtd = application/xml-dtd
 el = text/x-common-lisp
 erl = text/x-erlang
+frag = x-shader/x-fragment
 gitmodules = text/x-ini
+glsl = x-shader/x-vertex
 go = text/x-go
 groovy = text/x-groovy
 hs = text/x-haskell
@@ -20,6 +22,7 @@ hxx = text/x-c++hdr
 lisp = text/x-common-lisp
 lsp = text/x-common-lisp
 lua = text/x-lua
+m = text/x-objectivec
 md = text/x-markdown
 patch = text/x-diff
 php = text/x-php
@@ -34,6 +37,7 @@ rb = text/x-ruby
 scala = text/x-scala
 st = text/x-stsrc
 v = text/x-verilog
+vert = x-shader/x-vertex
 vh = text/x-verilog
 vm = text/velocity
 yaml = text/x-yaml
