Syntax highlighting: Dockerfile, Dart, Soy
These modes are now supported by CodeMirror 4.9.

Change-Id: I42e546449e524a2de4fe70ac764fb5837f720f46

--- a/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
+++ b/gerrit-server/src/main/resources/com/google/gerrit/server/mime-types.properties
@@ -7,8 +7,10 @@ coffee = text/x-coffeescript
 cs = text/x-csharp
 cxx = text/x-c++src
 d = text/x-d
+dart = application/dart
 defs = text/x-python
 diff = text/x-diff
+Dockerfile = text/x-dockerfile
 dtd = application/xml-dtd
 el = text/x-common-lisp
 erl = text/x-erlang
@@ -36,6 +38,7 @@ r = text/r-src
 rst = text/x-rst
 rb = text/x-ruby
 scala = text/x-scala
+soy = text/x-soy
 st = text/x-stsrc
 stex = text/x-stex
 v = text/x-verilog
