Session expired: Change 'Close' to 'Go Anonymous'
When the user's session is expired its unclear what "Close" does.
Change the text to say "Go Anonymous", which is pretty much the
opposite of "Sign In".

Change-Id: If6235fcc271fe785c1a3f09f0ff6083d17b1e81b

--- a/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritConstants.properties
+++ b/gerrit-gwtui/src/main/java/com/google/gerrit/client/GerritConstants.properties
@@ -4,7 +4,7 @@ reportBug = Report Bug
 loadingPlugins = Loading plugins ...
 
 signInDialogTitle = Code Review - Sign In
-signInDialogClose = Close
+signInDialogGoAnonymous = Go Anonymous
 
 linkIdentityDialogTitle = Code Review - Link Identity
 registerDialogTitle = Code Review - Register New Account
