bower2bazel: don't specify versions for non-seed packages.
The 'seed' packages are the ones whose versions are set by us in
WORKSPACE. We should not set the versions for the rest of the packages
in the bower input JSON, so bower can suggest the right versions to
use.

Change-Id: I9b75f16655d049e2064726862980a339c91dd534

--- a/lib/js/BUILD
+++ b/lib/js/BUILD
@@ -2,9 +2,11 @@ package(default_visibility = ["//visibility:public"])
 
 load("//tools/bzl:js.bzl", "bower_component", "js_component")
 
-# For updating the bower versions, run
+# For importing new versions of existing bower packages,
 #
-#  python tools/js/bower2bazel.py -w lib/js/bower_archives.bzl -b lib/js/bower_components.bzl
+# 1) edit the versions of 'seed' components in WORKSPACE as desired
+#
+# 2) Run: 'python tools/js/bower2bazel.py -w lib/js/bower_archives.bzl -b lib/js/bower_components.bzl', to update dependency versions.
 #
 
 # For adding a new component as dependency to a bower_component_bundle
