Expose commons-lang3 in plugin API
commons-lang is already exposed in the plugin API. Given that some
plugins depend on commons-lang3, expose it too, to make building
the plugins against it easier.

Change-Id: I16e2dda225738b24489da810f43d8148af39acbf

--- a/gerrit-plugin-api/BUILD
+++ b/gerrit-plugin-api/BUILD
@@ -20,6 +20,7 @@ EXPORTS = [
     "//gerrit-gwtexpui:server",
     "//gerrit-reviewdb:server",
     "//lib/commons:lang",
+    "//lib/commons:lang3",
     "//lib/dropwizard:dropwizard-core",
     "//lib/guice:guice",
     "//lib/guice:guice-assistedinject",
