--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,35 @@
+# Keep following lines sorted according to `LC_COLLATE=C sort`
+*.asc
+*.eml
+*.iml
+*.pyc
+*.sublime-*
+*.swp
+*~
+.DS_Store
+.gwt_work_dir
+.primary_build_tool
 /.apt_generated
 /.buckd
 /.classpath
 /.factorypath
-/.project
-/.settings/org.maven.ide.eclipse.prefs
-/.settings/org.eclipse.m2e.core.prefs
-/.settings/org.eclipse.ltk.core.refactoring.prefs
-/.metadata
-/test_site
 /.idea
-*.iml
-*.eml
-*.sublime-*
-/gerrit-package-plugins
+/.metadata
+/.project
+/.settings/org.eclipse.ltk.core.refactoring.prefs
+/.settings/org.eclipse.m2e.core.prefs
+/.settings/org.maven.ide.eclipse.prefs
 /bazel-bin
 /bazel-genfiles
 /bazel-gerrit
 /bazel-out
 /bazel-testlogs
+/bin/
 /buck-out
 /eclipse-out
 /extras
+/gerrit-package-plugins
+/gwt-unitCache
 /infer-out
 /local.properties
-*.pyc
-/gwt-unitCache
-.DS_Store
-*.swp
-*.asc
-/bin/
-*~
-.primary_build_tool
-.gwt_work_dir
+/test_site
