ProjectOperations: Allow arbitrary updates of project.config
This allows tests to insert invalid entries in the project.config file.

Signed-off-by: Edwin Kempin <ekempin@google.com>
Change-Id: I01440867b295e843507ca41bcd703af659db32dd

--- a/java/com/google/gerrit/acceptance/testsuite/project/BUILD
+++ b/java/com/google/gerrit/acceptance/testsuite/project/BUILD
@@ -14,6 +14,7 @@ java_library(
         "//java/com/google/gerrit/server",
         "//lib:guava",
         "//lib:jgit",
+        "//lib:jgit-junit",
         "//lib/auto:auto-value",
         "//lib/auto:auto-value-annotations",
         "//lib/commons:lang",
