Register a gson type adapter for proto generated messages
This is needed in preparation to convert the REST api entities to
protobufs. The new ProtoTypeAdapter.java is copied from gson upstream
because this class is not exported from this library.

Change-Id: Ic04143ba7e2c9be9d944802377bdf45c92d765b7

--- a/java/com/google/gson/protobuf/BUILD
+++ b/java/com/google/gson/protobuf/BUILD
@@ -1,11 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
 java_library(
-    name = "json",
-    srcs = glob(["*.java"]),
+    name = "adapter",
+    srcs = ["ProtoTypeAdapter.java"],
     visibility = ["//visibility:public"],
     deps = [
-        "//java/com/google/gson/protobuf:adapter",
         "//lib:gson",
         "//lib:guava",
         "//lib:protobuf",
