Convert AccessCheckInfo to proto
Migrating the API entity "AccessCheckInfo" to proto. Other entities can
be migrated in the same manner. There is going to be a single
"api.proto" living under the proto/ directory.

Change-Id: Ie923de648b7ab1d9aa4b9926973c835960aff396

--- a/javatests/com/google/gerrit/acceptance/api/project/BUILD
+++ b/javatests/com/google/gerrit/acceptance/api/project/BUILD
@@ -4,5 +4,8 @@ acceptance_tests(
     srcs = glob(["*IT.java"]),
     group = "api_project",
     labels = ["api"],
-    deps = ["//java/com/google/gerrit/index/project"],
+    deps = [
+        "//java/com/google/gerrit/index/project",
+        "//proto:api_entities_java_proto",
+    ],
 )
