Convert AccessCheckInfo to proto
Migrating the API entity "AccessCheckInfo" to proto. Other entities can
be migrated in the same manner. There is going to be a single
"api.proto" living under the proto/ directory.

Change-Id: Ie923de648b7ab1d9aa4b9926973c835960aff396

--- a/java/com/google/gerrit/server/restapi/BUILD
+++ b/java/com/google/gerrit/server/restapi/BUILD
@@ -1,4 +1,6 @@
 load("@rules_java//java:defs.bzl", "java_library")
+load("@rules_java//java:defs.bzl", "java_proto_library")
+load("@rules_proto//proto:defs.bzl", "proto_library")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -39,5 +41,6 @@ java_library(
         "//lib/flogger:api",
         "//lib/guice",
         "//lib/guice:guice-assistedinject",
+        "//proto:api_entities_java_proto",
     ],
 )
