Add a new folder for API types
This is to ensure apps embedding gr-diff and plugins have a stable API
and the Gerrit team takes special care and applies versioning when
changing these.

Change-Id: I46a6d0ecbe620048c9a73c29a27011a8dbc8693e

--- a/polygerrit-ui/app/BUILD
+++ b/polygerrit-ui/app/BUILD
@@ -6,6 +6,7 @@ package(default_visibility = ["//visibility:public"])
 # This list must be in sync with the "include" list in the follwoing files:
 # tsconfig.json, tsconfig_bazel.json, tsconfig_bazel_test.json
 src_dirs = [
+    "api",
     "constants",
     "elements",
     "embed",
