Move OAuth and OpenID support out of server target
The server (gerrit core) doesn't depend on these specific
authentication providers.

Unfortunately, OpenIdProviderPattern is still wired up firmly with
the server target through fields in AuthConfig.

Change-Id: I9f1217601f9fb63496a860e390421abe21829daf

--- a/java/com/google/gerrit/server/BUILD
+++ b/java/com/google/gerrit/server/BUILD
@@ -144,6 +144,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         ":server",
+        "//java/com/google/gerrit/auth",
         "//java/com/google/gerrit/extensions:api",
         "//java/com/google/gerrit/server/git/receive",
         "//java/com/google/gerrit/server/logging",
