Move GetOAuthToken out of the core restapi
The GetOAuthToken is specific to oauth authentication, so put it in a
new directory at under httpd.

Change-Id: I74287b88019eda5a2d8c27765e87769e0963d690

--- a/java/com/google/gerrit/httpd/init/BUILD
+++ b/java/com/google/gerrit/httpd/init/BUILD
@@ -12,6 +12,7 @@ java_library(
         "//java/com/google/gerrit/httpd",
         "//java/com/google/gerrit/httpd/auth/oauth",
         "//java/com/google/gerrit/httpd/auth/openid",
+        "//java/com/google/gerrit/httpd/auth/restapi",
         "//java/com/google/gerrit/index",
         "//java/com/google/gerrit/lifecycle",
         "//java/com/google/gerrit/lucene",
