--- a/project.config
+++ b/project.config
@@ -73,6 +73,13 @@
 	forgeCommitter = group google/gerritcodereview-maintainers@googlegroups.com
 	forgeServerAsCommitter = group google/gerritcodereview-maintainers@googlegroups.com
 	push = +force group google/gerritcodereview-maintainers@googlegroups.com
+[access "^refs/heads/.*-issue-13858$"]
+        create = group google/gerritcodereview-maintainers@googlegroups.com
+        delete = group google/gerritcodereview-maintainers@googlegroups.com
+        forgeAuthor = group google/gerritcodereview-maintainers@googlegroups.com
+        forgeCommitter = group google/gerritcodereview-maintainers@googlegroups.com
+        forgeServerAsCommitter = group google/gerritcodereview-maintainers@googlegroups.com
+        push = +force group google/gerritcodereview-maintainers@googlegroups.com
 [notify "polygerrit-reviews"]
 	header = cc
 	email = polygerrit-reviews@google.com
