Convert GpgKeyInfo to proto
Converting this entity since it contains an enum field. I'd next try
with an entity having a timestamp field.

Change-Id: Ie1941d22e5f2a46a0f8f0c7595407d94febb5095

--- a/javatests/com/google/gerrit/acceptance/rest/account/BUILD
+++ b/javatests/com/google/gerrit/acceptance/rest/account/BUILD
@@ -8,6 +8,7 @@ acceptance_tests(
     deps = [
         ":util",
         "//java/com/google/gerrit/server/account/externalids/testing",
+        "//proto:api_entities_java_proto",
     ],
 )
 
